--- a/content/news/2025-11-09-junior.md
+++ b/content/news/2025-11-09-junior.md
@@ -1,4 +1,3 @@
-
 ---
 title: 'FOSDEM Junior Call for Participation'
 ---
@@ -51,7 +50,6 @@ The conference language is English. All content must relate to Free and
 Open Source Software. By participating in the event you agree to the 
 publication of your slides and other content provided under 
 the same licence as all FOSDEM content (CC-BY). By participating in 
-FOSDEM you are required to adhere the Code of Conduct: 
-https://fosdem.org/2025/practical/conduct/
+FOSDEM you are required to adhere the [Code of Conduct](https://fosdem.org/2025/practical/conduct/).
 
 The FOSDEM junior track is not recorded.
